--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,14 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="https://www.paypal.com/sdk/js?currency=EUR&client-id=AY_6nvr9FYbxAFtnWJEpXZt5dFgm9rUSQZvAk36n3ZwdzQHWZaN2C2_luDSsuka5SaR10Mf9HPjIX-aB" ></script>
+  <!-- <script src="https://www.paypal.com/sdk/js?currency=EUR&client-id=ARSjif2xkiWTTFFd58gvw7V53rl0g2ncytE6Vj9OyWdG7E4KY_-tEA3qM82avNHgRTpR4z1JBaaSV2ba" ></script> -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/1abe6bc90a.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body class="mat-typography" style="height: 100%;">
   <app-root></app-root>
 </body>
 </html>
