--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,15 @@
   <title>Novi</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="apple-touch-icon" sizes="57x57" href="assets/icons/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="assets/icons/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="assets/icons/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="assets/icons/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="assets/icons/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- <script src="https://www.paypal.com/sdk/js?currency=EUR&client-id=AY_6nvr9FYbxAFtnWJEpXZt5dFgm9rUSQZvAk36n3ZwdzQHWZaN2C2_luDSsuka5SaR10Mf9HPjIX-aB" ></script> -->
   <script src="https://www.paypal.com/sdk/js?currency=EUR&client-id=ARSjif2xkiWTTFFd58gvw7V53rl0g2ncytE6Vj9OyWdG7E4KY_-tEA3qM82avNHgRTpR4z1JBaaSV2ba" ></script> 
